<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.myfragmentsproject.MyFirstFragment">

    <!-- TODO: Update blank fragment layout -->



    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:hint="First Number"
        android:id="@+id/num1"
        />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:hint="Second Number"
        android:id="@+id/num2"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:text="+"
        android:id="@+id/plus"
        />



</LinearLayout>
