<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.myfragmentsproject.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:id="@+id/answer"
        />

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.myfragmentsproject.MyFirstFragment"
        android:layout_weight="1"
        android:id="@+id/fragment1"
        >

    </fragment>
    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.myfragmentsproject.MySecondFragment"
        android:layout_weight="1"
        android:id="@+id/fragment2"
        >

    </fragment>

</LinearLayout>
